cmake_minimum_required(VERSION 3.23)
project(nanotree)
set(CMAKE_CXX_STANDARD 20)
find_package(raylib REQUIRED)
file(GLOB_RECURSE SOURCES "src/*.cpp")
set(MAIN_FILE ${CMAKE_SOURCE_DIR}/src/main.cpp)
add_executable(${PROJECT_NAME} ${MAIN_FILE} ${SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(${PROJECT_NAME} PRIVATE raylib)